CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(BUILD_TYPE Release)

PROJECT(optical_flow)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")

FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS}
                    "/usr/include/eigen3")

MESSAGE(STATUS "OpenCV INCLUD: ${OpenCV_INCLUDE_DIRS} \n ${OpenCV_LIBRARIES}")


ADD_EXECUTABLE(${PROJECT_NAME} optical_flow.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
                      ${OpenCV_LIBRARIES})